# mcp-gauge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md
docs/ideas/: initial-requirements.md
src/mcp_gauge/: __init__.py  __main__.py  config.py  exceptions.py  prompts.py  server.py
src/mcp_gauge/engines/: __init__.py  compare.py  evaluate.py  lint.py  report.py  scenario.py  session.py  trace.py
src/mcp_gauge/infra/: __init__.py  llm_client.py  mcp_client.py  storage.py
src/mcp_gauge/models/: __init__.py  lint.py  results.py  scenario.py  trace.py
tests/: conftest.py  test_example.py
tests/e2e/: conftest.py  test_dogfooding.py  test_http_transport.py
tests/fixtures/mock_server/: http_server.py  server.py
tests/unit/: test_config.py  test_exceptions.py  test_prompts.py
tests/unit/engines/: test_compare.py  test_evaluate.py  test_lint.py  test_report.py  test_scenario.py  test_session.py  test_trace.py
tests/unit/infra/: test_mcp_client.py  test_storage.py
tests/unit/models/: test_models.py
